# rust_k_perimeter

./: .gitignore  Cargo.toml  README.md  changelog.md  perf.data
log/: 10000.txt
misc/: e.csv  extracted_data.csv  results.csv  rt_table.tex  summary_files.txt  v8_ideas.md
misc/results/: res_1.1.txt  res_1.2.txt
output/: 1111_summmary.txt  1112_summmary.txt  111_summmary.txt  1123_summmary.txt  19999_summmary.txt  2222_summary.txt  2222_summmary.txt  3333_summary.txt  3333_summmary.txt  33_summmary.txt  4444_results.txt  44_summmary.txt  5555_summmary.txt  555_summmary.txt  55_summmary.txt  9999_summmary.txt
scripts/: Manifest.toml  Project.toml  add_k  comp_ring_widths  compare_queuing_strat  do_1_to_1000  do_all  do_tests  extract_running_time  extract_running_time.jl  extract_stats.jl  gen_plots  generate_plot.jl  generate_table.jl  generate_table_2.jl  generate_table_3.jl  log_fit.jl  merge_annulus_info  plots.jl  red_create_webpage  update_paper_and_plots
scripts/src/: deps.jl
src/: .geom.rs.swp  deps.jl  dp.rs  draw.rs  geom.rs  k_perimeter.jl  kd_tree.rs  logger.rs  main.rs  point.rs  polygon.rs  sys_info.rs  v_graph.rs
src_old/: main.rs  point.rs
tempg/: .gitignore  GEMINI.md  Manifest.toml  Project.toml  README.md
tempg/misc/: extracted_data.csv  retain.md  rt_table.tex  summary_files.txt  test_results.md
tempg/prompts/: merge_annulus_width_info.md
tempg/scripts/: analyze_edge_len  compute_annulus_width.jl  create_gemini_md  do_tests  extract_running_time.jl  extract_stats.jl  gen_plots  generate_table.jl  log_fit.jl  red_create_webpage  (+2 more)
(+5 files in other folders)
